--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "github-node-package",
-  "version": "1.0.0",
+  "name": "@szubair/github-node-package",
+  "version": "1.0.1",
   "description": "",
   "main": "app.js",
   "scripts": {
